[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "ldlt-sim"
version = "1.0.0"
description = "Clinical-grade synthetic digital twin for LDLT"
authors = [{name="LDLT Research Team"}]
dependencies = [
    "numpy",
    "pandas",
    "fastapi",
    "uvicorn",
    "streamlit",
    "pyyaml"
]
